[gd_scene load_steps=3 format=3 uid="uid://cmtqkblwe3n1s"]

[ext_resource type="Script" uid="uid://cgvxt4w3ipetq" path="res://path_button.gd" id="1_qa01j"]
[ext_resource type="Texture2D" uid="uid://b32e8rcagayxo" path="res://sprites/UnknownPath.png" id="1_vkqa2"]

[node name="PathButton" type="Node2D"]
script = ExtResource("1_qa01j")

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
texture_normal = ExtResource("1_vkqa2")
texture_pressed = ExtResource("1_vkqa2")
passby_press = true

[connection signal="pressed" from="TouchScreenButton" to="." method="_on_touch_screen_button_pressed"]
[connection signal="released" from="TouchScreenButton" to="." method="_on_touch_screen_button_released"]
